--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -8,16 +8,13 @@
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for (let product of prods) { %>
+                        <% for (const product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
                                         <%= product.title %>
                                     </h1>
                                 </header>
-                                <div class="card__image">
-                                    <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
-                                </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$
                                         <%= product.price %>
@@ -29,7 +26,11 @@
                                 <div class="card__actions">
                                     <a href="/products/<%= product._id %>" class="btn">Details</a>
                                     <% if (isAuthenticated) { %>
-                                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                        <form action="/cart" method="POST">
+                                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                            <input type="hidden" name="productId" value="<%= product._id %>">
+                                            <button class="btn" type="submit">Add to Cart</button>
+                                        </form>
                                     <% } %>
                                 </div>
                             </article>
